--- a/ThesisPresentation.tex
+++ b/ThesisPresentation.tex
@@ -14,7 +14,7 @@
 \usepackage{wrapfig}
 \usepackage{xcolor}
 
-\usepackage{caption,tabularx}
+\usepackage{caption,tabularx,subcaption}
 \usepackage{animate,xmpmulti,multimedia}
 
 % Absolute value declaration
@@ -235,16 +235,18 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 \end{itemize}
 \begin{figure}[h!]
 	\centering
-	%\begin{subfigure}{0.5\textwidth}
+	\begin{subfigure}{0.45\linewidth}
+	\flushleft
+	\includegraphics[width=\linewidth]{figures/Error}
+	\end{subfigure}
+	\begin{subfigure}{0.4\linewidth}
 	\centering
-	\includegraphics[width=.4\textwidth]{figures/Grid2D}
-	%\caption{Lorem ipsum}
-	%\end{subfigure}
-	%\begin{subfigure}{0.48\textwidth}
-	%		\centering
-	%		\includegraphics[width=\textwidth]{figures/Grid2D}
-	%\caption{Lorem ipsum}
-	%	\end{subfigure}
+	\hspace*{2mm} \includegraphics[width=\linewidth]{figures/Grid2D}
+	\footnotesize
+	\hspace*{3.5mm}Пример сетки из двух доменов.
+	%\subcaption{Cетка из двух доменов.}
+	\vspace{10mm}
+	\end{subfigure}
 	%\caption{Cетка из двух доменов.}
 \end{figure}
 \end{frame}
